Fixed overlay disabling user interaction when interaction had opt out turned off. Added video wrapper class to make sure all interactions are hidden behind overlay during disable-opt-out. [HFJ-1431]

--- a/styles/interactive-video.css
+++ b/styles/interactive-video.css
@@ -32,6 +32,14 @@
   z-index: 1;
 }
 
+.h5p-interactive-video .h5p-video-wrapper.h5p-disable-opt-out {
+  z-index: auto;
+}
+
+.h5p-interactive-video .h5p-video-wrapper.h5p-disable-opt-out .h5p-interaction {
+  z-index: 1;
+}
+
 .h5p-interactive-video .h5p-question {
   color: #000;
 }
